--- a/views/newPost.jade
+++ b/views/newPost.jade
@@ -6,4 +6,7 @@ block content
         each error, i in errors
             div.alert.alert-danger #{error.msg}
     form(method='post', action='/users/post')
+        .form-group
+            label Name
+            input.form-control(name='name', type='text', placeholder='Enter Name')
         input.btn.btn-primary(type='submit', name='submit', value='Register')
