Addition Login Tests

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
     input(type='hidden', name= 'username', value = user.username)
     .form-group
       label Post Text
-      input.form-control(name='postText', type='text', placeholder='say something...')
+      input.form-control(name='text', type='text', placeholder='say something...')
     .form-group
       label Post Image
       input.form-control(name='media', type='file')
